--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "framer-motion": "^11.0.14",
     "next": "14.1.0",
     "react": "18",
-    "react-dom": "18"
+    "react-dom": "18",
+    "react-typed": "^2.0.12"
   },
   "devDependencies": {
     "autoprefixer": "10.0.1",
