--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "next": "14.1.0",
     "react": "18",
     "react-dom": "18",
+    "react-toastify": "^10.0.5",
     "react-typed": "^2.0.12"
   },
   "devDependencies": {
